Fixed scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -82,12 +82,12 @@ hr {
 
 /* Header card */
 .header-card {
-    width: 45%;
-    min-width: 400px;
-    max-width: 300px;
+    width: 40vw;
+    min-width: 300px;
+    max-width: 350px;
     margin: auto;
     height: 10vh;
-    min-height: 10vh;
+    min-height: 80px;
 }
 
     .header-card img {
@@ -96,17 +96,16 @@ hr {
     }
 
 .header-card-portrait {
+    float: left;
     height: inherit;
     min-height: inherit;
-    float: left;
     vertical-align: middle;
 }
 
 .header-card-details {
-    margin-left: 3vw;
+    float: right;
     height: inherit;
     min-height: inherit;
-    float: left;
 }
 
 .header-card-title {
@@ -180,7 +179,8 @@ Projects
 .square-list {
     padding: 0;
     margin: auto;
-    width: 70%;
+    width: 60%;
+    min-width: 600px;
     list-style-type: none;
 }
 
@@ -205,6 +205,7 @@ Projects
             pointer-events: none;
             transition: 0.3s opacity;
             vertical-align: central;
+            border-radius: 35px;
         }
 
         .square-list li h2 {
@@ -228,6 +229,7 @@ Projects
             -ms-transform: translateZ(0);
             -o-transform: translateZ(0);
             transform: translateZ(0);
+            border-radius: 35px;
         }
 
             .square-list li a:before {
